# ilib

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  FAQ.html  Ilib.html  Makefile  NEWS  README  README.md  SECURITY.md  TODO
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  python-publish.yml  release.yml  security-scan.yml
clients/: CMakeLists.txt  Makefile
clients/ianim/: ianim.c
clients/ichart/: ichart.c
clients/idisplayfont/: Makefile  courR10.h  idisplayfont.c
clients/ifont2h/: Makefile  ifont2h  ifont2h.c
clients/ifraggraph/: Makefile  helvB18.h  ifraggraph.c
clients/iindex/: Makefile  iindex.c
clients/imogrify/: imogrify.c
clients/iwebreprt/: Makefile  iwebreprt.c
cmake/: IlibConfig.cmake.in  IlibFonts.cmake  IlibHardening.cmake  IlibWarnings.cmake  ilib.pc.in
docs/: Doxyfile.in  gallery.md  tutorial.md
docs/design/: alpha-aa.md
docs/man/: idisplayfont.1  ifont2h.1  ifraggraph.1  iindex.1  ilib-anim.1  ilib-chart.1  ilib-displayfont.1  ilib-font2h.1  ilib-fraggraph.1  ilib-index.1  ilib-mogrify.1  ilib-webreprt.1  iwebreprt.1
docs/samples/: animation.py  charts.py  generate.sh  sales.csv
examples/: CMakeLists.txt  Makefile
examples/ichart/: ichart.c
examples/iconvert/: Makefile  iconvert.c
examples/isample/: Makefile  helvR08.h  helvR24.h  isample.c
fonts/: Makefile
include/: Ilib.h  Makefile
packaging/: README.md
perl/: Changes  Ilib.pm  Ilib.xs  MANIFEST  Makefile.PL  README  test.pl  typemap  xstmp.c
python/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
python/examples/: demo.py
python/src/ilib/: __init__.py  _ffi.py  _version.py  animation.py  chart.py  color.py  constants.py  errors.py  font.py  gc.py  image.py
python/tests/: test_ilib.py
src/: CMakeLists.txt  IAVIF.c  IAnimation.c  IArcProp.c  IBMP.c  IChart.c  IColor.c  IColorsP.h  ICompose.c  IConvolve.c  ICopyImg.c  IDrawArc.c  IDrawCir.c  IDrawCurve.c  IDrawEll.c  IDrawLin.c  IDrawPol.c  IDrawPt.c  IDrawRec.c  IDrawStr.c  IDrawText.c  IErrorStr.c  IExif.c  IFileType.c  IFillArc.c  IFillCir.c  IFillEll.c  IFillPol.c  IFillRec.c  IFilter.c  IFlood.c  IFont.c  IFontBDF.c  IFontBDF.h  IFontTTF.c  IGC.c  IGIF.c  IGradient.c  IImage.c  IJPEG.c  (+22 more)
tests/: CMakeLists.txt  fuzz_bdf.c  fuzz_decode.c  pixutil.h  smoke.c  test_animation.c  test_chart.c  test_color.c  test_compose.c  test_convolve.c  test_draw.c  test_filter.c  test_formats.c  test_handles.c  test_malformed.c  test_pixel.c  test_resample.c  test_text.c  test_transform.c
