[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ilib"
version = "0.1.0"
description = "Python bindings (cffi) for the Ilib C raster-image library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
authors = [{ name = "Craig Knudsen", email = "craig@k5n.us" }]
keywords = ["image", "raster", "graphics", "drawing", "gif", "png", "jpeg", "bmp"]
dependencies = ["cffi>=1.15"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://www.k5n.us/Ilib.php"
Source = "https://github.com/craigk5n/ilib"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
