[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
# The bare "ilib" name is taken on PyPI by an unrelated project, so the
# distribution is published as "ilib-graphics". The import name is still
# "ilib" (import ilib).
name = "ilib-graphics"
dynamic = ["version"]
description = "Python bindings (cffi) for the Ilib C raster-image library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
authors = [{ name = "Craig Knudsen", email = "craig@k5n.us" }]
keywords = ["image", "raster", "graphics", "drawing", "gif", "png", "jpeg", "bmp"]
dependencies = ["cffi>=1.15"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://www.k5n.us/Ilib.php"
Source = "https://github.com/craigk5n/ilib"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.dynamic]
# Read statically from the import-free _version.py (no package import at build).
version = { attr = "ilib._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
